--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>Portfolio </title>
-    <body>
-      <p> This is a test portfolio</p>
-    </body>
-    
+
+    <link rel:sytlesheet href:style.css>
   </head>
+  <body>
+    <p> This is a test portfolio</p>
+  </body>
   
 </html>
