--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Portfolio </title>
 
-    <link rel:sytlesheet href:style.css>
+    <link rel="sytlesheet" href="style.css">
   </head>
   <body>
     <p> This is a test portfolio</p>
