--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Portfolio </title>
-
-    <link rel="sytlesheet" href="style.css">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p> This is a test portfolio</p>
+    <p>This is a test portfolio</p>
   </body>
-  
 </html>
